# dise-opvbesscar

./: .dockerignore  .editorconfig  .env.example  .gitignore  .markdownlint.json  .pylintrc  .pyrightignore  00_COMIENZA_AQUI.md  00_INSTALAR_PYTHON_311_AHORA.txt  00_PROJECT_COMPLETION_REPORT.md  00_RESUMEN_EJECUTIVO_LISTO_ENTRENAR.md  00_RESUMEN_VISUAL_FINAL_2026_01_31.txt  01_RESUMEN_MEJORAS_CODIGO_COMPLETADAS.txt  1.1.0  3SOURCES_IMPLEMENTATION.md  5_ARCHIVOS_OBLIGATORIOS_OE2.md  5_PASOS_FINALES.txt  A2C_CO2_ALIGNMENT_FINAL_2026-02-16.md  A2C_MALL_DEMAND_2024.md  A2C_SETUP_SUMMARY.json  A2C_TRAINING_IN_PROGRESS.md  A2C_v72_TRAINING_COMPLETE_2026-02-17.md  ACLARACION_DEMANDA_REAL_MALL.md  ACLARACION_ENTRADA_SALIDA_BESS_BALANCE.py  ACLARACION_EV_CHARGERS_vs_CHARGERS.md  ACTION_CHECKLIST.md  ACTIVACION_GPU_EN_PROGRESO.txt  ACTUALIZACION_ARQUITECTURA_CARGADORES_2026_01_30.md  ACTUALIZACION_BESS_COMPLETADA.md  ACTUALIZACION_CITYLEARN_SEPARADO.md  ACTUALIZACION_COMPLETADA.txt  ACTUALIZACION_DATOS_REALES_2026_01_30.md  ACTUALIZACION_DATOS_REALES_FASE2_2026_01_31.md  ACTUALIZACION_DOCKER_20260120.md  ACTUALIZACION_FINAL.md  ACTUALIZACION_INTEGRAL_LIMPIEZA_FINAL_2026_01_31.md  ACTUALIZACION_OPERACIONAL_HORARIOS_CICLOS_2026_01_30.md  ACTUALIZACION_PERFIL_SOLAR.py  ACTUALIZACION_RESUMEN_Y_PDF_2026-02-19.md  ACTUALIZACION_VALORES_COMPLETA_2026_01_31.md  (+2022 more)
.github/: THESIS_STATUS.md  copilot-instructions.md
.venv_py311/: pyvenv.cfg
_archivos_obsoletos_backup/: CIERRE_ENTRENAMIENTO_SAC.md  CONFIRMACION_FINALIZACION_ACTUALIZACIONES.md  ESTRUCTURA_EPISODIOS_EXPLICADA.md  EXPLICACION_POR_QUE_CUATRO_EPISODIOS.md  FIX_ROBUSTO_SAC_METRICAS_ENERGY.md  GRAFICAS_ENTRENAMIENTO_PPO_v1.md  MATRIZ_VALIDACION_AGENTES.md  REPORTE_COMPARATIVO_CHECKPOINTS_SAC_vs_PPO.md  REPORTE_COMPARATIVO_SAC_vs_PPO.md  REPORTE_DATASET_BASELINE_FINAL_ANUAL.md  RESUMEN_CAMBIOS_28ENERO_2026.md  RESUMEN_EXHAUSTIVO_FINAL.md  RESUMEN_PENALIDADES_CORRECTO_ES.md  STATUS_SAC_PASO_2600.md  STATUS_SAC_PASO_8700.md  TABLA_COMPARATIVA_FINAL.md  VALIDACION_EXHAUSTIVA_AGENTES.md  VERIFICACION_COMPLETA_REGLAS_AGENTES.md  VERIFICACION_EXITOSA_FINAL.md  VERIFICACION_PENALIDADES_DETALLADA.md
analyses/: .gitkeep  compare_agents_complete.py  plot_agents_comparison.py
archive/: .gitkeep  AUDIT_PROJECT.py  continue_sac_training.py  generate_mall_demand_schema.py  launch_sac_fixed.py  validate_sac_files.py
configs/: default.yaml  default_optimized.yaml  sac_optimized.json  sac_ppo_only.yaml  test_minimal.yaml
data/: .datasets_metadata.json  dispatch_test_results.json
examples/: README.md  (+2 more)
(+2431 files in other folders)
