[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iquitos-citylearn"
version = "0.1.0"
description = "OE2→OE3 CityLearn v2 pipeline for Iquitos EV charging infrastructure"
requires-python = ">=3.11,<3.12"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
