[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pvbesscar"
version = "1.0.0"
description = "RL-based building energy management system"
requires-python = ">=3.10"
readme = { file = "README.md", content-type = "text/markdown" }

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py313']

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.pylint]
max-line-length = 120
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
