[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pvbesscar"
version = "1.0.0"
description = "RL-based building energy management system"
requires-python = ">=3.11,<3.12"
readme = { file = "README.md", content-type = "text/markdown" }

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.pylint]
max-line-length = 120
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
check_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["annotation-unchecked"]

# Configuración específica para librerías sin stubs
[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "citylearn.*"
ignore_missing_imports = true
